; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_luaL_newmetatable.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_luaL_newmetatable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @luaL_newmetatable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaL_newmetatable(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @lua_getfield(i32* %6, i32 -10000, i8* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @lua_isnil(i32* %9, i32 -1)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @lua_pop(i32* %14, i32 1)
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @lua_newtable(i32* %16)
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @lua_pushvalue(i32* %18, i32 -1)
  %20 = load i32*, i32** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @lua_setfield(i32* %20, i32 -10000, i8* %21)
  store i32 1, i32* %3, align 4
  br label %23

23:                                               ; preds = %13, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @lua_getfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
